--- a/.travis.yml
+++ b/.travis.yml
@@ -2,3 +2,4 @@ language: objective-c
 xcode_project: EventBox.xcodeproj
 xcode_scheme: EventBoxTests
 xcode_sdk: iphonesimulator
+osx_image: xcode6.4
